fix unwanted white space with css grid

--- a/style.css
+++ b/style.css
@@ -28,24 +28,26 @@ html {
     grid-row: 1 / 2;
     grid-column: 2 / 5;
     margin-top: 10%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 5fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
 }
-
-#main-deck{
-    border-radius: 4%;
-    box-shadow: 6px 6px 3px rgba(0, 0, 0, 0.2);
+#intro-plus-deck{
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
 }
 #ppp-grid{
+    grid-column: 2 / 5;
+    grid-row: 2 / 3;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
     text-align: center;
-    visibility: hidden;
-  
-    
+    visibility: hidden;  
 }
 #advice{
+    grid-column: 2 / 5;
     grid-row: 2 / 3;
-    grid-column: 2 / 4;
     visibility: hidden;
 }
 .card{
@@ -67,13 +69,14 @@ html {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto auto auto;
     margin-bottom: 10%;
-
 }
 #unhappy-customer{
     grid-row: 2 / 3;
     grid-column: 1 /4;
-
-
+}
+#question-card{
+    grid-column: 2 / 5;
+    grid-row: 2 / 3;
 }
 #question{
     grid-row: 1 / 2;
@@ -164,6 +167,8 @@ h2:hover{
     grid-template-rows: auto;
 }
 #cardfan img{
+    border-radius: 4%;
+    box-shadow: 6px 6px 3px rgba(0, 0, 0, 0.2);
     grid-row: 1 / 2;
     grid-column: 3 / 4;
     transform-origin: center 600px;
